--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <section>
         <h2>Introduction to Lice Treatment</h2>
-        <p>Lice treatment has been a crucial aspect of human health for centuries. The treatment of head lice, a common disease caused by the infestation of the scalp by lice, has evolved significantly over time. From ancient remedies like mayonnaise to modern over-the-counter medicines and prescription medications, the journey of lice treatment is both fascinating and essential for public health.</p>
+        <p><a href="https://lice-removal-lice-treatment.neocities.org/doctors-lice-treatment-letter">Lice treatment</a> has been a crucial aspect of human health for centuries. The treatment of head lice, a common disease caused by the infestation of the scalp by lice, has evolved significantly over time. From ancient remedies like mayonnaise to modern over-the-counter medicines and prescription medications, the journey of lice treatment is both fascinating and essential for public health.</p>
     </section>
 
     <section>
